# code-names-bot-clue-generator-old

./: README.md  config.py  pyproject.toml  tasks.py
code_names_bot_clue_generator/: config.py
code_names_bot_clue_generator/clues/: clues_database.py
code_names_bot_clue_generator/hypernym_clues/: generate_hypernym_clues.py
code_names_bot_clue_generator/scores/: clue_generator.py  scores_database.py
evaluation/: clue_generator.py  scenario.py  train_test_split.py  triplet_evaluator.py  triplet_generator.py
evaluation_reports/: def_filtered_hypernym_eval_report.yaml  hypernym_eval_report.yaml  hypernym_test_eval_report.yaml  hypernym_train_eval_report.yaml  obj_only_hypernym_eval_report.yaml  object-filtered_hypernym_test_eval_report.yaml
static/: evaluation_triplets.yaml  old_train_triplets.yaml  term_primary_synsets.yaml  test_triplets.txt  train_triplets.txt  train_triplets.yaml
static/triplets/: custom_triplets.yaml  triplets_1.yaml  triplets_2.yaml
tools/: explore_clues.py  get_hypernyms.py  get_hyponyms.py  get_oxford_definition.py  get_synsets.py  set_primary_synsets.py
